--- a/metamask-assessment.html
+++ b/metamask-assessment.html
@@ -9,6 +9,7 @@
         body {
             font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             margin: initial;
+            font-size: 14px;
         }
         .title {
             font-size: 42px;
@@ -39,6 +40,12 @@
             background-image: linear-gradient(150deg, #a155c2, #6e3eb8, #283db5);
             color: #ffffff;
             font-size: 16px;
+        }
+        .box {
+            background: rgba(100, 100, 100, .4);
+            padding: 4px 12px;
+            border-radius: 6px; 
+            display: inline-block;
         }
 
         /* sparkling stars */
@@ -80,8 +87,10 @@
         <div class="text-center" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -60%);">
             <h1 class="title">Web3 Wallet</h1>
             <button class="btn-primary sparkling" id="connectButton">Let's Start to Connect</button>
-            <p>Connected Address: <span id="connectedAddress">Not connected</span></p>
-            <p>Connected Network: <span id="connectedNetwork">Not connected</span></p>
+            <div>
+                <p class="box"><span id="connectedAddress">Address Not Connected Yet</span></p>&nbsp;&nbsp;
+                <p class="box"><span id="connectedNetwork">Network Not Connected Yet</span></p>
+            </div>
         </div>
     </div>
 
